Fixed layout issues on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -341,9 +341,15 @@ body {
   margin-top: -20vh;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .section-about {
     padding: 20rem 0;
+  }
+}
+
+@media (max-width: 56.25em) {
+  .section-about {
+    padding: 20rem 0rem;
   }
 }
 
@@ -557,9 +563,20 @@ body {
   position: relative;
 }
 
+@media (max-width: 75em) {
+  .composition {
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    padding-top: 5rem;
+  }
+}
+
 @media (max-width: 56.25em) {
   .composition {
-    margin-top: 5rem;
+    position: relative;
+    top: 0;
+    left: 0;
   }
 }
 
@@ -575,6 +592,14 @@ body {
   transition: all .2s;
 }
 
+@media (max-width: 75em) {
+  .composition__photo {
+    position: relative;
+    float: left;
+    width: 30.3333333%;
+  }
+}
+
 @media (max-width: 56.25em) {
   .composition__photo {
     position: relative;
@@ -582,6 +607,7 @@ body {
     width: 33.33333333%;
     -webkit-box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
             box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+    margin-top: 5rem;
   }
 }
 
@@ -590,7 +616,7 @@ body {
   top: -2rem;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .composition__photo--p1 {
     top: 1rem;
     -webkit-transform: scale(1.2);
@@ -604,7 +630,7 @@ body {
   z-index: 50;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .composition__photo--p2 {
     top: -1rem;
     -webkit-transform: scale(1.3);
@@ -617,7 +643,7 @@ body {
   top: 10rem;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .composition__photo--p3 {
     top: 1rem;
     left: 0;
@@ -1357,19 +1383,24 @@ body {
   }
 }
 
+@media (max-width: 37.5em) {
+  .row [class^="col-"] {
+    margin-left: 0rem;
+  }
+}
+
 .row [class^="col-"]:not(:last-child) {
   margin-right: 6rem;
 }
 
 @media (max-width: 75em) {
   .row [class^="col-"]:not(:last-child) {
-    margin-right: 0rem;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 56.25em) {
   .row [class^="col-"]:not(:last-child) {
-    margin-right: 0;
     margin-bottom: 6rem;
   }
 }
