--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,8 +1,17 @@
 .composition {
     position: relative;
 
+    @include respond(tab-land) {
+        position: absolute;
+        top: 50%;
+        left: 55%;
+        padding-top: 5rem;
+    }
+
     @include respond(tab-port) {
-        margin-top: 5rem;
+        position: relative;
+        top: 0;
+        left: 0;
     }
 
     &__photo {
@@ -15,18 +24,25 @@
 
         transition: all .2s;
 
+        @include respond(tab-land) {
+            position: relative;
+            float: left;
+            width: 30.3333333%;
+        }
+
         @include respond(tab-port) {
             position: relative;
             float: left;
             width: 33.33333333%;
             box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+            margin-top: 5rem;
         }
 
         &--p1 {
             left: 0;
             top: -2rem;
 
-            @include respond(tab-port) {
+            @include respond(tab-land) {
                 top: 1rem;
                 transform: scale(1.2)
             }
@@ -37,7 +53,7 @@
             top: 2rem;
             z-index: 50;
 
-            @include respond(tab-port) {
+            @include respond(tab-land) {
                 top: -1rem;
                 transform: scale(1.3)
 
@@ -48,7 +64,7 @@
             left: 20%;
             top: 10rem;
 
-            @include respond(tab-port) {
+            @include respond(tab-land) {
                 top: 1rem;
                 left: 0;
                 transform: scale(1.2)
