--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -30,15 +30,18 @@
             margin-left: 3.5rem;
         }
 
+        @include respond(phone) {
+            margin-left: 0rem;
+        }
+
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
 
             @include respond(tab-land) {
-                margin-right: 0rem;
+                margin-right: 0;
             }
 
             @include respond(tab-port) {
-                margin-right: 0;
                 margin-bottom: $gutter-vertical-small;
             }
 
